kubernetes/homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - port: 3000
      name: http
