kubernetes/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
spec:
  ingressClassName: caddy
  rules:
  - host: admin.thelegend27.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
