kubernetes/homepage/homepage-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingress
  namespace: cert-manager
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`admin.thelegend27.fr`)
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: homepage
          namespace: homepage
          port: 3000

  tls:
    secretName: admin-thelegend27-tls
